--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -152,7 +152,7 @@
                 <td>
                     <label class="form-control" name="[@i].MaterialBalance_SumPlus" type="text">@Model.Results[i].MaterialBalance_SumPlus</label>
                 </td>
-                @* ////// *@
+                @* /Сверху приход, снизу расход ///// *@
                 <td>
                     <label class="form-control" name="[@i].MaterialBalance_Smelt" type="text">@Model.Results[i].MaterialBalance_Smelt</label>
                 </td>
