--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -6,7 +6,7 @@
 <div class="result-content">
 
     <div class="result-balance-controll fixed-bottom">
-        <button id="materialBalance" type="button" class="btn btn-secondary btn-success">Показать на тонну расплава</button>
+        <button id="balanceConfigure" type="button" class="btn btn-secondary btn-success">Показать на тонну расплава</button>
         <button id="percent" type="button" class="btn btn-secondary btn-success">Показать в %</button>
     </div>
 
@@ -172,8 +172,8 @@
         </div>
         <div class="material-balance-content d-flex flex-wrap">
             <div class="material-balance-coming-content">
-                <h1 class="h3 material-balance-heading">Материальный баланс (приход), кг/ч</h1>
-                <table id="material-balance-coming-table" class="table table-result table-bordered table-responsive">
+                <h1 class="h3 material-balance-coming-heading">Материальный баланс (приход), кг/ч</h1>
+                <table id="material-balance-coming-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
                             <th class="text-center">См</th>
@@ -192,7 +192,7 @@
                             for (int i = 0; i < @Model.Results.Count; i++)
                             {
 
-                                <tr class="material-balance-hour">
+                                <tr>
                                     @if (i % 12 == 0)
                                     {
                                         <td rowspan="12">@(i/12+1)</td>
@@ -222,10 +222,30 @@
                                 </tr>
 
                             }
+                            
+                        }
+                    </tbody>
+                </table>
+                <table id="material-balance-coming-table-tonn" class="table table-result table-balance table-balance-tonn table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Габбро</th>
+                            <th>Известняк</th>
+                            <th>Марг.изв</th>
+                            <th>Кокс</th>
+                            <th>Природный газ</th>
+                            <th>Воздух</th>
+                            <th>Суммарный приход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
 
                             for (int i = 0; i < @Model.Results.Count; i++)
                             {
-                                <tr class="material-balance-tonn" style="display: none;">
+                                <tr>
                                     @if (i % 12 == 0)
                                     {
                                         <td rowspan="12">@(i/12+1)</td>
@@ -256,10 +276,111 @@
                         }
                     </tbody>
                 </table>
+
+                <table id="material-balance-coming-table-percent-hour" class="table table-result table-balance table-balance-percent-hour table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Габбро</th>
+                            <th>Известняк</th>
+                            <th>Марг.изв</th>
+                            <th>Кокс</th>
+                            <th>Природный газ</th>
+                            <th>Воздух</th>
+                            <th>Суммарный приход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalance_Gabbro), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalance_Limestone), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalance_M_Limestone), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalance_Cocks), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalance_Gas), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_Air / Model.Results[i].MaterialBalance_SumPlus, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_SumPlus / Model.Results[i].MaterialBalance_SumPlus, 3)</p>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+                <table id="material-balance-coming-table-percent-tonn" class="table table-result table-balance table-balance-percent-tonn table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Габбро</th>
+                            <th>Известняк</th>
+                            <th>Марг.изв</th>
+                            <th>Кокс</th>
+                            <th>Природный газ</th>
+                            <th>Воздух</th>
+                            <th>Суммарный приход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Gabbro * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Limestone * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_M_Limestone * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Cocks * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Gas * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_Air * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus, 3)</p>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
             </div>
             <div class="material-balance-consumption-content">
-                <h1 class="h3">Материальный баланс (расход)</h1>
-                <table id="material-balance-consumption-table" class="table table-result table-bordered table-responsive">
+                <h1 class="h3 material-balance-consumption-heading">Материальный баланс (расход), кг/ч</h1>
+                <table id="material-balance-consumption-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
                             <th class="text-center">См</th>
@@ -292,6 +413,46 @@
                                     </td>
                                     <td>
                                         <p class="text-center">@Math.Round(Model.Results[i].MaterialBalance_WasteSum, 3)</p>
+                                    </td>
+                                </tr>
+
+                            }
+                        }
+                    </tbody>
+                </table>
+                <table id="material-balance-consumption-table-tonn" class="table table-result table-balance table-balance-tonn table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Расплав</th>
+                            <th>Отходящие газы</th>
+                            <th>Пыль</th>
+                            <th>Суммарный расход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_Smelt, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_OutputGas, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_Dust, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_WasteSum, 3)</p>
                                     </td>
                                 </tr>
 
