--- a/ImpactCalculateWebApplication/wwwroot/css/site.css
+++ b/ImpactCalculateWebApplication/wwwroot/css/site.css
@@ -138,3 +138,15 @@ html {
 .even-row {
     background-color: #f1f1f1;
 }
+
+.table-balance {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.5s ease 0s;
+}
+
+.table-balance.table-hide {
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+}
