--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -6,7 +6,7 @@
 <div class="result-content">
 
     <div class="result-balance-controll fixed-bottom">
-        <button id="balanceConfigure" type="button" class="btn btn-secondary btn-success">Показать на тонну расплава</button>
+        <button id="balanceConfigure" type="button" class="btn btn-secondary btn-success">Показать на тонну</button>
         <button id="percent" type="button" class="btn btn-secondary btn-success">Показать в %</button>
     </div>
 
@@ -277,7 +277,7 @@
                     </tbody>
                 </table>
 
-                <table id="material-balance-coming-table-percent-hour" class="table table-result table-balance table-balance-percent-hour table-bordered table-responsive table-hide">
+                <table id="material-balance-coming-table-percent" class="table table-result table-balance table-balance-percent table-bordered table-responsive table-hide">
                     <thead>
                         <tr>
                             <th class="text-center">См</th>
@@ -326,57 +326,7 @@
                             }
                         }
                     </tbody>
-                </table>
-                <table id="material-balance-coming-table-percent-tonn" class="table table-result table-balance table-balance-percent-tonn table-bordered table-responsive table-hide">
-                    <thead>
-                        <tr>
-                            <th class="text-center">См</th>
-                            <th>Габбро</th>
-                            <th>Известняк</th>
-                            <th>Марг.изв</th>
-                            <th>Кокс</th>
-                            <th>Природный газ</th>
-                            <th>Воздух</th>
-                            <th>Суммарный приход</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        @{
-
-                            for (int i = 0; i < @Model.Results.Count; i++)
-                            {
-                                <tr>
-                                    @if (i % 12 == 0)
-                                    {
-                                        <td rowspan="12">@(i/12+1)</td>
-                                    }
-                                    <td>
-                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Gabbro * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Limestone * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_M_Limestone * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Cocks * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round((Model.Results[i].MaterialBalanceOnTonOfSmelt_Gas * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus), 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_Air * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus, 3)</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-center">@Math.Round(Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus * 100 / Model.Results[i].MaterialBalanceOnTonOfSmelt_SumPlus, 3)</p>
-                                    </td>
-                                </tr>
-                            }
-                        }
-                    </tbody>
-                </table>
+                </table>              
             </div>
             <div class="material-balance-consumption-content">
                 <h1 class="h3 material-balance-consumption-heading">Материальный баланс (расход), кг/ч</h1>
@@ -460,6 +410,45 @@
                         }
                     </tbody>
                 </table>
+
+                <table id="material-balance-consumption-table-percent" class="table table-result table-balance table-balance-percent table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Расплав</th>
+                            <th>Отходящие газы</th>
+                            <th>Пыль</th>
+                            <th>Суммарный расход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_Smelt / Model.Results[i].MaterialBalance_WasteSum, 3)</p>
+                                    </td>                                 
+                                    <td>                                  
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_OutputGas / Model.Results[i].MaterialBalance_WasteSum, 3)</p>
+                                    </td>                                 
+                                    <td>                                  
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_Dust / Model.Results[i].MaterialBalance_WasteSum, 3)</p>
+                                    </td>                                 
+                                    <td>                                  
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].MaterialBalance_WasteSum / Model.Results[i].MaterialBalance_WasteSum, 3)</p>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
         <div class="w-content">
@@ -503,8 +492,8 @@
         </div>
         <div class="heat-balance-content d-flex flex-wrap">
             <div class="heat-balance-coming-content">
-                <h1 class="h3">Тепловой баланс (приход)</h1>
-                <table id="heat-balance-coming-table" class="table table-result table-bordered table-responsive">
+                <h1 class="h3 heat-balance-coming-heading">Тепловой баланс (приход), кг/ч</h1>
+                <table id="heat-balance-coming-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
                             <th class="text-center">См</th>
@@ -544,10 +533,91 @@
                         }
                     </tbody>
                 </table>
+                <table id="heat-balance-coming-table-tonn" class="table table-result table-balance table-balance-tonn table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Воздух</th>
+                            <th>Кокс</th>
+                            <th>Природный газ</th>
+                            <th>Суммарный приход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_Air, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_Cocks, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_Gas, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_SumPlus, 3)</p>
+                                    </td>
+                                </tr>
+
+                            }
+                        }
+                    </tbody>
+                </table>
+
+                <table id="heat-balance-coming-table-percent" class="table table-result table-balance table-balance-percent table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Воздух</th>
+                            <th>Кокс</th>
+                            <th>Природный газ</th>
+                            <th>Суммарный приход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_Air / Model.Results[i].TeploBalance_SumPlus, 3)</p>
+                                    </td>                                  
+                                    <td>                                   
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_Cocks / Model.Results[i].TeploBalance_SumPlus, 3)</p>
+                                    </td>                                  
+                                    <td>                                   
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_Gas / Model.Results[i].TeploBalance_SumPlus, 3)</p>
+                                    </td>                                  
+                                    <td>                                   
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_SumPlus / Model.Results[i].TeploBalance_SumPlus, 3)</p>
+                                    </td>
+                                </tr>
+
+                            }
+                        }
+                    </tbody>
+                </table>
             </div> 
             <div class="heat-balance-consumption-content">
-                <h1 class="h3">Тепловой баланс (расход)</h1>
-                <table id="heat-balance-consumption-table" class="table table-result table-bordered table-responsive">
+                <h1 class="h3 heat-balance-consumption-heading">Тепловой баланс (расход), кг/ч</h1>
+                <table id="heat-balance-consumption-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
                             <th class="text-center">См</th>
@@ -592,6 +662,111 @@
                                     </td>
                                     <td>
                                         <p class="text-center">@Math.Round(Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                </tr>
+
+                            }
+                        }
+                    </tbody>
+                </table>
+                <table id="heat-balance-consumption-table-tonn" class="table table-result table-balance table-balance-tonn table-bordered table-responsive  table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Образование расплава</th>
+                            <th>Отх. газы</th>
+                            <th>Пыль</th>
+                            <th>Хим. недожёг</th>
+                            <th>Эндотерм. реакции</th>
+                            <th>Потери с охл. водой</th>
+                            <th>Суммарный расход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_MeltGeneration, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_OutputGas, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_Dust, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_ChemistryUnderburning, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_Endoterm_Reactions, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_CoolingWater, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(Model.Results[i].TeploBalanceOnTonOfSmelt_SumWaste, 3)</p>
+                                    </td>
+                                </tr>
+
+                            }
+                        }
+                    </tbody>
+                </table>
+
+                <table id="heat-balance-consumption-table-percent" class="table table-result table-balance table-balance-percent table-bordered table-responsive table-hide">
+                    <thead>
+                        <tr>
+                            <th class="text-center">См</th>
+                            <th>Образование расплава</th>
+                            <th>Отх. газы</th>
+                            <th>Пыль</th>
+                            <th>Хим. недожёг</th>
+                            <th>Эндотерм. реакции</th>
+                            <th>Потери с охл. водой</th>
+                            <th>Суммарный расход</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @{
+                            for (int i = 0; i < @Model.Results.Count; i++)
+                            {
+
+                                <tr>
+                                    @if (i % 12 == 0)
+                                    {
+                                        <td rowspan="12">@(i/12+1)</td>
+                                    }
+
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_MeltGeneration / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_OutputGas / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_Dust / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_ChemistryUnderburning / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_Endoterm_Reactions / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_CoolingWater / Model.Results[i].TeploBalance_SumWaste, 3)</p>
+                                    </td>
+                                    <td>
+                                        <p class="text-center">@Math.Round(100 * Model.Results[i].TeploBalance_SumWaste / Model.Results[i].TeploBalance_SumWaste, 3)</p>
                                     </td>
                                 </tr>
 
