--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -3,7 +3,17 @@
     ViewData["Title"] = "Result";
 }
 
-<div class="result-content">
+<section class="head py-5 text-center container">
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">Результаты расчёта</h1>
+            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+
+        </div>
+    </div>
+</section>
+
+<div class="result-content bg-light py-4">
 
     <div class="result-balance-controll fixed-bottom">
         <button id="balanceConfigure" type="button" class="btn btn-secondary btn-success">Показать на тонну</button>
