--- a/ImpactCalculateWebApplication/Views/Shared/_Layout.cshtml
+++ b/ImpactCalculateWebApplication/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" src="~/lib/bootstrap-table/dist/extensions/sticky-header/bootstrap-table-sticky-header.css">
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
 </head>
 <body>
 
