--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -7,7 +7,7 @@
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Результаты расчёта</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+            <p class="lead text-muted">В результате расчета определяются тепловой и материальный балансы работы обжигового шахтного агрегата, а также зависимость суммарного прихода тепла от процентного содержания марганцовистого известняка</p>
 
         </div>
     </div>
@@ -15,9 +15,9 @@
 
 <div class="result-content bg-light py-4">
 
-    <div class="result-balance-controll fixed-bottom">
-        <button id="balanceConfigure" type="button" class="btn btn-secondary btn-success">Показать на тонну</button>
-        <button id="percent" type="button" class="btn btn-secondary btn-success">Показать в %</button>
+    <div class="result-balance-controll fixed-bottom p-4" style="width: fit-content;">
+        <button id="balanceConfigure" type="button" class="btn btn-secondary">Показать на тонну</button>
+        <button id="percent" type="button" class="btn btn-secondary">Показать в %</button>
     </div>
 
     <div class="result-container container-fluid d-flex flex-wrap">
@@ -507,7 +507,7 @@
 
         <div class="result-third-stage heat-balance-content d-flex flex-wrap justify-content-between w-100  mt-5">
             <div class="heat-balance-coming-content">
-                <h1 class="h3 heat-balance-coming-heading">Тепловой баланс (приход), кг/ч</h1>
+                <h1 class="h3 heat-balance-coming-heading">Тепловой баланс (приход), кДж</h1>
                 <table id="heat-balance-coming-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
@@ -631,7 +631,7 @@
                 </table>
             </div>
             <div class="heat-balance-consumption-content">
-                <h1 class="h3 heat-balance-consumption-heading">Тепловой баланс (расход), кг/ч</h1>
+                <h1 class="h3 heat-balance-consumption-heading">Тепловой баланс (расход), кДж</h1>
                 <table id="heat-balance-consumption-table-hour" class="table table-result table-balance table-balance-hour table-bordered table-responsive">
                     <thead>
                         <tr>
@@ -878,9 +878,11 @@
                     </table>
                 </div>
             </div>
-            <div class="graphic-content mr-auto ml-4">
+            <div class="graphic-content mr-auto ml-4" style="width: 500px;">
                 <h1 class="h3 text-center">Зависимость суммарного прихода тепла от процентного содержания марганцовистого известняка</h1>
-                <canvas id="myChart" width="400" height="400" style="margin-bottom: 50px"></canvas>
+                <div class="graphic">
+                    <canvas id="myChart" width="400" height="400" style="margin-bottom: 50px"></canvas>
+                </div>
             </div>
         </div>
 
@@ -895,7 +897,7 @@
         data: {
             labels: @Model.Chart.lables_Json,
             datasets: [{
-                label: 'Температура материала, t, *C',
+                label: 'Суммарный приход тепла, кДж',
                 data: @Model.Chart.data_Json,
                 fill: false,
                 borderColor: "#325082",
@@ -915,7 +917,7 @@
                 xAxes: [{
                     scaleLabel: {
                         display: true,
-                        labelString: "Содержание марганцовистого известняка, %"
+                        labelString: "Содержание марганцовистого известняка, кг/ч"
                     }
                 }]
             },
