LAST COMMIT 3 STAGE

--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -134,7 +134,7 @@
                 <thead>
                     <tr>
                         <th class="text-center">Смены</th>
-                        <th class="text-center">Расход воздуха, м3/ч</th>
+                        <th class="text-center">Расход воздуха, м<sup>3</sup>/ч</th>
                         <th class="text-center">Давление воздуха, мбар</th>
                         <th class="text-center">Температура подогрева воздуха, *C</th>
                         <th class="text-center">Температура отходящих газов, *C</th>
@@ -145,7 +145,7 @@
                         <th class="text-center">Содержание N2, %</th>
                         <th class="text-center">Содержание O2, %</th>
 
-                        <th class="th-custom-padding">Габро, кг/ч</th>
+                        <th class="th-custom-padding">Габбро, кг/ч</th>
                         <th>Известняк, кг/ч</th>
                         <th>Марганцовистый известняк, кг/ч</th>
                         <th class="th-custom-padding">Кокс, кг/ч</th>
