--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -465,7 +465,7 @@
                 </div>
 
             <div class="w-content">
-                <h1 class="h3">W</h1>
+                <h1 class="h3">Теплоёмкости потоков, Дж/(кг·К)</h1>
                 <table id="w-table" class="table table-result table-bordered table-responsive">
                     <thead>
                         <tr>
