LAST COMMIT STAGE 5

--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -858,19 +858,19 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <p class="text-center">@Math.Round(Model.AverageSiO2, 3)</p>
+                                    <p class="text-center">@Math.Round(100 * Model.AverageSiO2, 3)</p>
                                 </td>
                                 <td>
-                                    <p class="text-center">@Math.Round(Model.AverageAl2O3, 3)</p>
+                                    <p class="text-center">@Math.Round(100 * Model.AverageAl2O3, 3)</p>
                                 </td>
                                 <td>
-                                    <p class="text-center">@Math.Round(Model.AverageCaO, 3)</p>
+                                    <p class="text-center">@Math.Round(100 * Model.AverageCaO, 3)</p>
                                 </td>
                                 <td>
-                                    <p class="text-center">@Math.Round(Model.AverageMgO, 3)</p>
+                                    <p class="text-center">@Math.Round(100 * Model.AverageMgO, 3)</p>
                                 </td>
                                 <td>
-                                    <p class="text-center">@Math.Round(Model.AverageFeO, 3)</p>
+                                    <p class="text-center">@Math.Round(100 * Model.AverageFeO, 3)</p>
                                 </td>
                             </tr>
 
