--- a/ImpactCalculateWebApplication/Views/Home/Index.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Index.cshtml
@@ -30,6 +30,9 @@
                 <button type="submit" id="AddRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Добавить</button>
                 <button type="submit" id="RemoveRow" name="buttonType" class="row-configure-button btn btn-light btn-sm">Удалить</button>
             </div>
+            <div class="ml-auto">
+                <button type="submit" id="tableFull" name="buttonType" class="row-configure-button btn btn-light btn-sm">Развернуть таблицу</button>
+            </div>
         </div>
 
         <form action="/Home/Index" id="inputForm" method="post" class="input-form">
