LAST COMMIT STAGE 7

--- a/ImpactCalculateWebApplication/Views/Home/Result.cshtml
+++ b/ImpactCalculateWebApplication/Views/Home/Result.cshtml
@@ -15,12 +15,12 @@
 
 <div class="result-content bg-light py-4">
 
-    <div class="result-balance-controll fixed-bottom p-4" style="width: fit-content;">
+    <div class="result-balance-controll fixed-bottom p-4" style="max-width: 1920px; padding: 0 10px 0 10px; margin: 0 auto;">
         <button id="balanceConfigure" type="button" class="btn btn-secondary">Показать на тонну</button>
         <button id="percent" type="button" class="btn btn-secondary">Показать в %</button>
     </div>
 
-    <div class="result-container container-fluid d-flex flex-wrap">
+    <div class="result-container d-flex flex-wrap" style="max-width: 1920px; padding: 0 10px 0 10px; margin: 0 auto;">
         <div class="result-first-stage d-flex flex-wrap justify-content-between w-100">
             <div class="gas-content">
                 <h1 class="h3">Расчёт по составу отводимых газов</h1>
